--- a/locales/en.default.schema.json
+++ b/locales/en.default.schema.json
@@ -487,7 +487,7 @@
           "settings": {
             "text": {
               "label": "Text",
-              "default": "Welcomes to our store"
+              "default": "Welcomes2 to our store"
             },
             "text_alignment": {
               "label": "Text alignment",
